cython extension for isotonic regression

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6f61a40",
+   "execution_count": 1,
+   "id": "9284a0a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0bb11734",
+   "execution_count": 2,
+   "id": "87ffc0dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f98811c",
+   "execution_count": 3,
+   "id": "9fbcf907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9aba22a6",
+   "execution_count": 4,
+   "id": "bbd51829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "89871eac",
+   "execution_count": 6,
+   "id": "8d970255",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff580707",
+   "id": "7a68793f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the test from `run_test` -- trivial 2d test\n",
+    "X1 = rg.normal(loc=[[0], [0]], size=(2, 400))\n",
+    "X2 = rg.normal(loc=[[4], [4]], size=(2, 400))\n",
+    "X3 = rg.normal(loc=[[8], [0]], size=(2, 400))\n",
+    "X = np.hstack([X1, X2, X3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f929b22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = isosplit.isosplit5(X, K_init=10, max_iterations_per_pass=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ed8343f",
    "metadata": {},
    "outputs": [],
    "source": []
