clean up up_down logic

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9284a0a0",
+   "id": "6df113a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "87ffc0dc",
+   "id": "b0e5e6bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9fbcf907",
+   "id": "fda67d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bbd51829",
+   "id": "90b953ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8d970255",
+   "id": "1bfd3d2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a68793f",
+   "execution_count": 7,
+   "id": "0435593b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,18 +68,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f929b22",
+   "execution_count": 9,
+   "id": "94ed5bfd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parcelate got 11 parcels\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "max iterations per pass exceeded",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-39bf0be03479>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0misosplit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misosplit5\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_init\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/projects/isosplit/isosplit/isosplit5.py\u001b[0m in \u001b[0;36misosplit5\u001b[0;34m(X, isocut_threshold, min_cluster_size, K_init, refine_clusters, max_iterations_per_pass, whiten_cluster_pairs, initial_labels, prevent_merge, one_comparison_at_a_time)\u001b[0m\n\u001b[1;32m    217\u001b[0m             \u001b[0miteration\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0miteration\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mmax_iterations_per_pass\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"max iterations per pass exceeded\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    220\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m             \u001b[0;31m# active labels are those which are still being used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: max iterations per pass exceeded"
+     ]
+    }
+   ],
    "source": [
-    "labels = isosplit.isosplit5(X, K_init=10, max_iterations_per_pass=10000)"
+    "labels = isosplit.isosplit5(X, K_init=10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ed8343f",
+   "id": "7f9fbc72",
    "metadata": {},
    "outputs": [],
    "source": []
