update demo to new exports

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4ed0b64e",
+   "id": "53344fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3d367d11",
+   "id": "6f48c7a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "19fb368d",
+   "id": "410250a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd385eee",
+   "id": "2bfdf09d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3adff062",
+   "id": "dd94e2b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4224ff1c",
+   "id": "8cabd29d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e8a34aa6",
+   "id": "3d639355",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
     "    rg.normal(loc=[[8], [0]], size=(2, 400)),\n",
     "])\n",
     "y = np.hstack([[0] * 400, [1] * 400, [2] * 400])\n",
-    "labels = isosplit.isosplit5(X, K_init=20)\n",
+    "labels = isosplit.isosplit(X, K_init=20)\n",
     "cluster_scatter_2d(X, labels)\n",
     "print(\"adj rand score:\", metrics.adjusted_rand_score(y, labels))\n",
     "plt.show()"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4cf43375",
+   "id": "94f13166",
    "metadata": {
     "scrolled": false
    },
@@ -155,7 +155,7 @@
     "    for c, n, z in zip(covs, Ns, centers)\n",
     "])\n",
     "y = np.hstack([[0] * (2 * N), [1] * (N // 2), [2] * (N // 10), [3] * (N // 20), [4] * (N // 2)])\n",
-    "labels = isosplit.isosplit5(X, whiten_cluster_pairs=1, refine_clusters=0)\n",
+    "labels = isosplit.isosplit(X, whiten_cluster_pairs=1, refine_clusters=0)\n",
     "cluster_scatter_2d(X, labels)\n",
     "print(\"adj rand score:\", metrics.adjusted_rand_score(y, labels))\n",
     "plt.show()"
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5da7611b",
+   "id": "bf027b26",
    "metadata": {},
    "outputs": [],
    "source": []
